set pluginId as classloader name, and now we can simply resolve plugin from exception trace